Add README, organise files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Portfolio site",
-  "main": "index.html",
+  "main": "src/index.html",
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
